src/objects/jj_rb_Rebate_Claim__c.object
<CustomObject>
    <description>This object will store the claim invoice submitted by the customer.</description>
    <fields>
        <fullName>jj_rb_Claim_Date__c</fullName>
        <formula>DATE(value(text(jj_rb_Year__c)) ,value(text(jj_rb_Month__c)) ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer_Invoice_Number__c</fullName>
        <label>Customer Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Claims</relationshipLabel>
        <relationshipName>Rebate_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Dataload_external_Id__c</fullName>
        <externalId>true</externalId>
        <label>Dataload external Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_Invoice_document_date__c</fullName>
        <label>Invoice document date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Invoice_due_date__c</fullName>
        <label>Invoice due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_CustomerNo__c</fullName>
        <description>SAP Customer No</description>
        <formula>jj_rb_Customer__r.jj_rb_SAP_Customer_Number__c</formula>
        <label>SAP Customer No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Vendor_No__c</fullName>
        <description>Vendor No of the customer from SAP</description>
        <formula>jj_rb_Customer__r.jj_rb_SAP_Vendor_Number__c</formula>
        <label>SAP Vendor No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Calculated_VAT__c</fullName>
        <description>Sum of the calculated VAT for all line items.</description>
        <label>Total Calculated VAT</label>
        <summarizedField>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Calculated_VAT__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Rebate_Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Line_Items__c</fullName>
        <description>Total number of line items in rebate claim.</description>
        <label>Total Line Items</label>
        <summaryForeignKey>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Rebate_Claim__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Rebate_Amount__c</fullName>
        <label>Total Rebate Amount</label>
        <summarizedField>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Net_Rebate__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Rebate_Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Total_Rebate_Including_VAT__c</fullName>
        <description>Sum of all &quot;total rebate including VAT&quot; fields.</description>
        <label>Total Rebate Including VAT</label>
        <summarizedField>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Net_Rebate_including_VAT__c</summarizedField>
        <summaryForeignKey>jj_rb_Rebate_Claim_Line_Item__c.jj_rb_Rebate_Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>jj_rb_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rebate Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Total_Rebate_Amount__c</columns>
        <columns>jj_rb_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FD</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Total_Rebate_Amount__c</columns>
        <columns>jj_rb_Status__c</columns>
        <filterScope>Queue</filterScope>
        <label>Finance Director</label>
        <language>en_US</language>
        <queue>jj_rb_Finance_Director</queue>
    </listViews>
    <listViews>
        <fullName>Head_of_BU</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Total_Rebate_Amount__c</columns>
        <filterScope>Queue</filterScope>
        <label>Head of BU</label>
        <language>en_US</language>
        <queue>jj_rb_Head_of_BU</queue>
    </listViews>
    <listViews>
        <fullName>Homecare_Rebate_Claim</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>jj_rb_Total_Rebate_Amount__c</columns>
        <columns>jj_rb_Total_Rebate_Including_VAT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Claim__c.jj_rb_Homecare_Claim</value>
        </filters>
        <label>Homecare Rebate Claim</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NCM</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>NCM</label>
        <language>en_US</language>
        <queue>jj_rb_NCM</queue>
        <sharedTo>
            <group>jj_rb_UK_National_Channel_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retailer_Rebate_Claim</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Month__c</columns>
        <columns>jj_rb_Year__c</columns>
        <columns>jj_rb_Status__c</columns>
        <columns>jj_rb_Total_Rebate_Amount__c</columns>
        <columns>jj_rb_Total_Rebate_Including_VAT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>jj_rb_Rebate_Claim__c.jj_rb_Retailer_Rebate_Claim</value>
        </filters>
        <label>Retailer Rebate Claim</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Rebate Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Claims</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_Homecare_Claim</fullName>
        <active>true</active>
        <description>Use this to create a claim for Homecare Provider customers.</description>
        <label>Homecare Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Rebate_Claim</fullName>
        <active>true</active>
        <description>Use this to create Rebate Claim for Retailer</description>
        <label>Retailer Rebate Claim</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>